fix mountains text overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,7 @@ h2 {
 /*media*/
 
 @media screen and (min-width: 2000px) {
-    
+   
 /*mountains*/
 
 
@@ -302,6 +302,7 @@ h2 {
     /* Mountains */
 
     .one-two {
+        height: fit-content;
         padding: 10px;
     }
 }
